--- a/src/components/EndCTA.module.css
+++ b/src/components/EndCTA.module.css
@@ -14,8 +14,8 @@
   flex-wrap: wrap;
 }
 .center {
-  padding-top: 108px;
-  padding-bottom: 108px;
+  padding-top: 120px;
+  padding-bottom: 120px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -63,7 +63,7 @@
     gap: 30px;
   }
   .center {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 88px;
+    padding-bottom: 88px;
   }
 }
